# IRPP_PROJ

./: README.md  run_simulation.sh  setup_dependencies.sh
gazebo_worlds/: institute_city.world
human_models/: README.md
human_models/ros_humans/: package.xml
human_models/ros_humans/launch/: move_humans.launch
human_models/ros_humans/scripts/: publish_human_pose.py
human_models/ros_humans_ros2/: package.xml  setup.py
human_models/ros_humans_ros2/launch/: demo.launch.py
human_models/ros_humans_ros2/ros_humans_ros2/: move_humans.py  publish_human_pose.py
install/: local_setup.sh  setup.sh
install/ros_humans/share/ros_humans/: package.bash  package.zsh
scan_project/gazebo_worlds/: complex_grid_map.world  custom_map.world  iiit_hyderabad.world  indoor_with_humans.world  institute_city.world
scan_project/human_models/: README.md
scan_project/human_models/ros_humans/: CMakeLists.txt
scan_project/human_models/ros_humans/launch/: demo.launch  human_pose_publisher.launch
scan_project/human_models/ros_humans/scripts/: move_humans.py
scan_project/human_models/ros_humans_ros2/: setup.cfg
scan_project/human_models/ros_humans_ros2/launch/: demo.launch.py
scan_project/human_models/ros_humans_ros2/ros_humans_ros2/: move_humans.py  publish_human_pose.py
