<?xml version="1.0"?>
<package format="2">
  <name>ros_humans</name>
  <version>0.1.0</version>
  <description>Human models publisher and mover for Gazebo + TurtleBot3 SCAN.</description>
  <maintainer email="user@example.com">scan-project</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>tf2_ros</depend>

  <export></export>
</package>
